@@ -1,11 +1,13 @@
-package pe.a3ya.mscustomers.infrastructure.mapers;
+package pe.a3ya.mscustomers.infrastructure.mappers;
 
+import lombok.AccessLevel;
+import lombok.NoArgsConstructor;
 import pe.a3ya.mscustomers.domain.aggregates.dto.AddressDto;
 import pe.a3ya.mscustomers.infrastructure.entities.AddressEntity;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+@NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class AddressMapper {
     public static AddressDto fromEntityToDto(AddressEntity addressEntity) {
         return AddressDto.builder()
@@ -24,6 +26,6 @@ public class AddressMapper {
     }
 
     public static List<AddressDto> fromEntityToDtoList(List<AddressEntity> addressEntities) {
-        return addressEntities.stream().map(AddressMapper::fromEntityToDto).collect(Collectors.toList());
+        return addressEntities.stream().map(AddressMapper::fromEntityToDto).toList();
     }
 }
